--- a/_scene/FXDsubviewInformation.xib
+++ b/_scene/FXDsubviewInformation.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina5_9" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -102,6 +102,7 @@
                 <outlet property="labelTitle" destination="9" id="11"/>
                 <outlet property="sliderProgress" destination="10" id="12"/>
             </connections>
+            <point key="canvasLocation" x="34" y="54"/>
         </view>
     </objects>
 </document>
