--- a/fXDKit/Resources/FXDviewInformation.xib
+++ b/fXDKit/Resources/FXDviewInformation.xib
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina5_9" orientation="portrait">
+    <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -12,19 +12,19 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="2" customClass="FXDsubviewInformation">
+        <view contentMode="scaleToFill" id="2" customClass="FXDviewInformation" customModule="fXDKit" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <activityIndicatorView opaque="NO" contentMode="scaleToFill" animating="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="3">
-                    <rect key="frame" x="169" y="387.66666666666669" width="37" height="37"/>
+                    <rect key="frame" x="169" y="387.5" width="37" height="37"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="37" id="NEz-k4-rtK"/>
                         <constraint firstAttribute="height" constant="37" id="gab-JZ-igc"/>
                     </constraints>
                 </activityIndicatorView>
                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" minimumFontSize="12" preferredMaxLayoutWidth="300" translatesAutoresizingMaskIntoConstraints="NO" id="9">
-                    <rect key="frame" x="38" y="344.66666666666669" width="300" height="30"/>
+                    <rect key="frame" x="38" y="344.5" width="300" height="30"/>
                     <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="30" id="XYm-lk-OhF"/>
@@ -36,7 +36,7 @@
                     <color key="shadowColor" red="0.66666668653488159" green="0.66666668653488159" blue="0.66666668653488159" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                 </label>
                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" minimumFontSize="12" preferredMaxLayoutWidth="300" translatesAutoresizingMaskIntoConstraints="NO" id="5">
-                    <rect key="frame" x="38" y="329.66666666666669" width="300" height="41"/>
+                    <rect key="frame" x="38" y="329.5" width="300" height="41"/>
                     <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="300" id="cf5-SR-vsr"/>
@@ -48,7 +48,7 @@
                     <color key="shadowColor" red="0.66666668653488159" green="0.66666668653488159" blue="0.66666668653488159" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                 </label>
                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" minimumFontSize="12" preferredMaxLayoutWidth="300" translatesAutoresizingMaskIntoConstraints="NO" id="4">
-                    <rect key="frame" x="38" y="469.66666666666669" width="300" height="41"/>
+                    <rect key="frame" x="38" y="469.5" width="300" height="41"/>
                     <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="41" id="LPP-qg-oxB"/>
@@ -60,14 +60,14 @@
                     <color key="shadowColor" red="0.66666668653488159" green="0.66666668653488159" blue="0.66666668653488159" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                 </label>
                 <slider hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" minValue="0.0" maxValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="10">
-                    <rect key="frame" x="38" y="457.66666666666669" width="300" height="29"/>
+                    <rect key="frame" x="38" y="457.5" width="300" height="29"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="296" id="NVt-xL-nJw"/>
                         <constraint firstAttribute="height" constant="28" id="gpR-zE-XEh"/>
                     </constraints>
                 </slider>
                 <progressView hidden="YES" opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="18">
-                    <rect key="frame" x="48" y="463.66666666666669" width="280" height="2"/>
+                    <rect key="frame" x="48" y="463.5" width="280" height="2"/>
                     <constraints>
                         <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="2" id="00n-cQ-fHY"/>
                         <constraint firstAttribute="height" constant="2" id="0kf-tj-rUF"/>
